--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ Flask-WTF==0.14.2
 guess_language-spirit==0.5.3
 idna==2.6
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2>=2.10.1
 Mako==1.0.7
 MarkupSafe==1.0
 PyJWT==1.5.3
@@ -28,11 +28,11 @@ python-dotenv==0.7.1
 python-editor==1.0.3
 pytz==2017.2
 redis==3.2.1
-requests==2.18.4
+requests>=2.20.0
 rq==1.0
 six==1.11.0
-SQLAlchemy==1.1.14
-urllib3==1.22
+SQLAlchemy>=1.3.0
+urllib3>=1.24.2
 visitor==0.1.3
-Werkzeug==0.14.1
+werkzeug>=0.15.3
 WTForms==2.1
