--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,10 @@ Flask-Migrate==2.1.1
 Flask-Moment==0.5.2
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-guess_language-spirit==0.5.3
+guess-language-spirit==0.5.3
 idna==2.6
 itsdangerous==0.24
-Jinja2>=2.10.1
+Jinja2==2.10.1
 Mako==1.0.7
 MarkupSafe==1.0
 PyJWT==1.5.3
@@ -28,11 +28,11 @@ python-dotenv==0.7.1
 python-editor==1.0.3
 pytz==2017.2
 redis==3.2.1
-requests>=2.20.0
+requests==2.22.0
 rq==1.0
 six==1.11.0
-SQLAlchemy>=1.3.0
-urllib3>=1.24.2
+SQLAlchemy==1.3.8
+urllib3==1.25.4
 visitor==0.1.3
-werkzeug>=0.15.3
+Werkzeug==0.16.0
 WTForms==2.1
