--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 alembic==0.9.6
+awscli==1.16.248
+awsebcli==3.15.3
 Babel==2.5.1
 blinker==1.4
+botocore==1.12.238
+cement==2.8.2
 certifi==2019.9.11
 chardet==3.0.4
 click==6.7
+colorama==0.3.9
+docutils==0.15.2
 dominate==2.3.1
 elasticsearch==6.1.1
 Flask==1.0.2
@@ -16,28 +22,42 @@ Flask-Migrate==2.1.1
 Flask-Moment==0.5.2
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+future==0.16.0
 guess-language-spirit==0.5.3
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10.1
+jmespath==0.9.4
 Mako==1.0.7
 MarkupSafe==1.0
 nba-api==1.1.4
 numpy==1.17.2
 pandas==0.25.1
+pathspec==0.5.9
+pyasn1==0.4.7
 PyJWT==1.7.1
+PyMySQL==0.9.3
+pyodbc==4.0.27
+pypiwin32==223
 PySocks==1.7.1
 python-dateutil==2.6.1
 python-dotenv==0.7.1
 python-editor==1.0.3
 pytz==2019.2
+pywin32==225
+PyYAML==3.13
 redis==3.2.1
-requests==2.22.0
+requests==2.20.1
 rq==1.0
-six==1.12.0
+rsa==3.4.2
+s3transfer==0.2.1
+semantic-version==2.5.0
+six==1.11.0
 SQLAlchemy==1.3.8
+termcolor==1.1.0
 twilio==6.31.0
-urllib3==1.21.1
+urllib3==1.24.3
 visitor==0.1.3
+wcwidth==0.1.7
 Werkzeug==0.16.0
 WTForms==2.1
